--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store-devtools": "^6.1.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "normalizr": "^3.3.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
